Avoid invisible dirs on Mac. Don't close on blur since clicking list won't work

--- a/src/brackets.less
+++ b/src/brackets.less
@@ -355,6 +355,7 @@ ul.smart_autocomplete_container {
     border: 1px solid #999;
     background-color: #FFFFFF;
     padding: 0px;
+    margin: 0px;
 
     .quickOpenPath {
         font-size: 11px;
